github_data_collector/src/data/issue_comment/zaidalyafeai_Swift4TF.txt
When setting up VGG 16 model, specifically defining the structure, I get the following:

error: <Cell 7>:1:8: error: type 'VGG16' does not conform to protocol 'Layer'
struct VGG16: Layer {
       ^

TensorFlow.Layer:2:20: note: protocol requires nested type 'Input'; do you want to add it?
    associatedtype Input : Differentiable
                   ^

TensorFlow.Layer:3:20: note: protocol requires nested type 'Output'; do you want to add it?
    associatedtype Output : Differentiable
                   ^